Fix iOS & Safari issues caused by display: flex on .container, fix resulting whitespace above body owing to margin on header

--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,13 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100vw;
   height: 100vh;
   background-image: url(../img/header-bg-shape.svg);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 50vw;
+  margin-bottom: 2em;
 }
 
 /** Sitewide Shared Values ###############  */
@@ -92,21 +90,10 @@ header {
   display: flex;
   justify-content: space-around;
   min-width: 100%;
-  margin: 2em 0;
+  padding-top: 1em;
 }
 
 /* header & footer */
-.logo {
-  background-image: url(../img/logo.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  padding: 2em;
-}
-
-.logo-header {
-  margin-right: 10%;
-}
-
 nav {
   margin-right: 5em;
 }
@@ -139,7 +126,7 @@ main {
   display: grid;
   grid-template-rows: 25em 25em;
   grid-template-columns: 25em 25em;
-  /* gap: 1em; */
+  justify-content: center;
   min-width: 100%;
 }
 
@@ -196,8 +183,10 @@ main {
 }
 
 .div-h-services {
-  padding-left: 5em;
-  padding-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1em;
 }
 
 .grid-services {
@@ -250,7 +239,7 @@ main {
 }
 
 .h3-pricing {
-  margin: 0.5em 0 1.5em;
+  margin-bottom: 1em;
   text-align: center;
 }
 
@@ -258,10 +247,7 @@ main {
   display: grid;
   grid-template-rows: 15em;
   grid-template-columns: 12em 12em 12em;
-  background-repeat: no-repeat;
-  background-size: contain;
-  justify-content: space-around;
-  margin: 0 0 3em;
+  justify-content: center;
 }
 
 .card-price {
@@ -269,6 +255,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  margin: 0 .5em 1em;
 }
 
 .h4-price {
@@ -364,22 +351,6 @@ footer > div > ul > li {
 .ul-contact > li > img {
   width: 1em;
 }
-
-/* Optional SVGs background in footer  */
-/* .footer-shape-1,
-.footer-shape-2 {
-  width: 100%;
-  height: auto;
-  position: absolute;
-  top: 200%;
-  clip: margin-box;
-  z-index: -1;
-}
-
-.footer-shape-2 {
-  left: 25%;
-  top: 205%;
-} */
 
 /** Media queries ############### */
 /** media greater >= 1440px  */
